# autosweep

./: .clang-format  LICENSE.txt  README.md  board.cc  board.h  cell.h  configure  desktop.cc  desktop.h  detector.cc  detector.h  lint.sh  main.cc  meson.build  record.sh  stream.cc  stream.h  tests.cc
autosweep/: board.cc  board.h  board_unittests.cc  boardstream.cc  boardstream.h  bruteforce_unittests.cc  cell.h  desktop.cc  desktop.h  detector.cc  detector.h  main.cc  mainneural.cc  network.cc  network.h  network_unittests.cc  neuralboard.cc  neuralboard.h  neuralboard_unittests.cc  stream.cc  stream.h  tests.cc
